--- a/.io-config.json
+++ b/.io-config.json
@@ -1,1 +1,1 @@
-{"app_id":"a606b893","api_key":"65d43b6a0a720b1f54b55cddad90e67c07ba37871c241ef8","gcm_key":"400009070269"}
+{"app_id":"a606b893","api_key":"65d43b6a0a720b1f54b55cddad90e67c07ba37871c241ef8","gcm_key":"400009070269","dev_push":false}
