--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.1.0",
     "ionic-service-core": "~0.1.10",
     "ngCordova": "~0.1.20-alpha",
-    "ionic-service-push": "~0.1.13"
+    "ionic-service-push": "~0.1.13",
+    "platform": "~1.3.0"
   }
 }
