--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
       "id": "com.phonegap.plugins.PushPlugin"
     }
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
