--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ionic-service-core": "~0.1.10",
     "ngCordova": "~0.1.20-alpha",
     "ionic-service-push": "~0.1.13",
-    "platform": "~1.3.0"
+    "platform": "~1.3.0",
+    "ionic-platform-web-client": "~0.1.0"
   }
 }
